--- a/app/src/main/res/layout/activity_listado.xml
+++ b/app/src/main/res/layout/activity_listado.xml
@@ -16,7 +16,8 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
         android:shrinkColumns="*"
-        android:stretchColumns="*">
+        android:stretchColumns="*"
+        android:id="@+id/tblPersonas">
 
         <TableRow
             android:layout_width="match_parent"
